@@ -1235,3 +1235,4 @@ The website documents directory for a virtual server can be changed from public_
 Updated the ZenCart script installer to version 1.3.9d, Coppermine to 1.5.6, MoinMoin to 1.8.8, Moodle to 1.9.9, Magento to 1.4.1.0, Trac to 0.12, Z-Push to 1.4, WordPress to 3.0, SugarCRM to 5.5.4, Piwik to 0.6.3, Simple Invoices to 2010.2, Bugzilla to 3.6.1, Radiant to 0.9.1, phpMyFAQ to 2.6.6, phpMyAdmin 3.3.4, Redmine to 1.0.0, CMS Made Simple to 1.8.1, PHPList to 2.11.5, Joomla to 1.5.20, Instiki to 0.18.1, and TikiWiki to 4.3.
 Alias domain DNS records are now copied from the target domain at creation time, rather than being created from the selected template.
 S3 backups can now be use the new reduced redundancy storage option, which is cheaper but less reliable.
+Internationalized domain names are no longer converted to UTF-8 for output from API commands, to avoid the perl "wide character in print" warning.
